--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-jshint": "~0.6.4"
   },
   "engines": {
-    "node": ">=0.10"
+    "node": ">=0.10",
+    "npm": ">=1.3.x"
   }
 }
