--- a/package.json
+++ b/package.json
@@ -1,30 +1,21 @@
 {
-  "author": "Tim Messerschmidt",
-  "name": "paypal-rest-node-sample",
-  "version": "1.0.0",
+  "name": "paypal",
+  "version": "0.0.0",
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/SeraphimSerapis/paypal-rest-node-sample.git"
-  },
-  "bugs": {
-    "url": "https://github.com/SeraphimSerapis/paypal-rest-node-sample/issues",
-    "email": "tmesserschmidt@paypal.com"
-  },
   "scripts": {
-    "start": "node app.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "3.3.5",
-    "jade": "*",
-    "paypal-rest-sdk": "~0.6.4"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.4"
-  },
-  "engines": {
-    "node": ">=0.10",
-    "npm": ">=1.3.x"
+    "body-parser": "~1.12.0",
+    "cookie-parser": "~1.3.4",
+    "debug": "~2.1.1",
+    "errorhandler": "^1.3.5",
+    "express": "~4.12.2",
+    "express-session": "^1.10.4",
+    "jade": "~1.9.2",
+    "method-override": "^2.3.2",
+    "morgan": "~1.5.1",
+    "paypal-rest-sdk": "^1.5.2",
+    "serve-favicon": "~2.2.0"
   }
 }
